Autoreg after an install in xpistub/wizard case (regression, bug 162593) r=dougt, sr=alecf, a=drivers